enable querying all album for 'esek-shared'(need to change auth still)
